@@ -1,4 +1,8 @@
-﻿shmuel 23.09.2015 19:34:14 +0200 - build 529
+﻿shmuel 26.09.2015 00:42:09 +0200 - build 530
+
+1. Загрузка макросов: при обнаружении несуществующих имён флагов выдаются сообщения об ошибке.
+
+shmuel 23.09.2015 19:34:14 +0200 - build 529
 
 1. LuaFAR + generic plugin:
    a) При загрузке и перезагрузке стартового скрипта плагина ему передаётся один аргумент булевого типа:
